// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Merge Component animates the children and render the div (default) element 1`] = `[Function]`;

exports[`Merge Component animates the children and render the h1 element 1`] = `[Function]`;

exports[`Merge Component matches the keyframes created by styled-components and default props 1`] = `


<div
  accept={undefined}
  acceptCharset={undefined}
  accessKey={undefined}
  action={undefined}
  allowFullScreen={undefined}
  allowTransparency={undefined}
  alt={undefined}
  async={undefined}
  autoComplete={undefined}
  autoFocus={undefined}
  autoPlay={undefined}
  capture={undefined}
  cellPadding={undefined}
  cellSpacing={undefined}
  challenge={undefined}
  charSet={undefined}
  checked={undefined}
  cite={undefined}
  classID={undefined}
  className="main"
  colSpan={undefined}
  cols={undefined}
  content={undefined}
  contentEditable={undefined}
  contextMenu={undefined}
  controls={undefined}
  coords={undefined}
  crossOrigin={undefined}
  data={undefined}
  dateTime={undefined}
  default={undefined}
  defer={undefined}
  dir={undefined}
  disabled={undefined}
  download={undefined}
  draggable={undefined}
  encType={undefined}
  form={undefined}
  formAction={undefined}
  formEncType={undefined}
  formMethod={undefined}
  formNoValidate={undefined}
  formTarget={undefined}
  frameBorder={undefined}
  headers={undefined}
  height={undefined}
  hidden={undefined}
  high={undefined}
  href={undefined}
  hrefLang={undefined}
  htmlFor={undefined}
  httpEquiv={undefined}
  icon={undefined}
  id={undefined}
  inputMode={undefined}
  integrity={undefined}
  is={undefined}
  keyParams={undefined}
  keyType={undefined}
  kind={undefined}
  label={undefined}
  lang={undefined}
  list={undefined}
  loop={undefined}
  low={undefined}
  manifest={undefined}
  marginHeight={undefined}
  marginWidth={undefined}
  max={undefined}
  maxLength={undefined}
  media={undefined}
  mediaGroup={undefined}
  method={undefined}
  min={undefined}
  minLength={undefined}
  multiple={undefined}
  muted={undefined}
  name={undefined}
  noValidate={undefined}
  nonce={undefined}
  open={undefined}
  optimum={undefined}
  pattern={undefined}
  placeholder={undefined}
  poster={undefined}
  preload={undefined}
  profile={undefined}
  radioGroup={undefined}
  readOnly={undefined}
  rel={undefined}
  required={undefined}
  reversed={undefined}
  role={undefined}
  rowSpan={undefined}
  rows={undefined}
  sandbox={undefined}
  scope={undefined}
  scoped={undefined}
  scrolling={undefined}
  seamless={undefined}
  selected={undefined}
  shape={undefined}
  size={undefined}
  sizes={undefined}
  span={undefined}
  spellCheck={undefined}
  src={undefined}
  srcDoc={undefined}
  srcLang={undefined}
  srcSet={undefined}
  start={undefined}
  step={undefined}
  style={
    Object {
      "animation": "fRXJaB 1s ease, bGJZDZ 1s ease",
      "backfaceVisibility": "visible",
    }
  }
  summary={undefined}
  tabIndex={undefined}
  target={undefined}
  title={undefined}
  type={undefined}
  useMap={undefined}
  value={undefined}
  width={undefined}
  wmode={undefined}
  wrap={undefined}
>
  <p>
    Hello
  </p>
</div>
`;

exports[`Merge Component renders the Component passed through the component prop 1`] = `


<div
  accept={undefined}
  acceptCharset={undefined}
  accessKey={undefined}
  action={undefined}
  allowFullScreen={undefined}
  allowTransparency={undefined}
  alt={undefined}
  async={undefined}
  autoComplete={undefined}
  autoFocus={undefined}
  autoPlay={undefined}
  capture={undefined}
  cellPadding={undefined}
  cellSpacing={undefined}
  challenge={undefined}
  charSet={undefined}
  checked={undefined}
  cite={undefined}
  classID={undefined}
  className={undefined}
  colSpan={undefined}
  cols={undefined}
  content={undefined}
  contentEditable={undefined}
  contextMenu={undefined}
  controls={undefined}
  coords={undefined}
  crossOrigin={undefined}
  data={undefined}
  dateTime={undefined}
  default={undefined}
  defer={undefined}
  dir={undefined}
  disabled={undefined}
  download={undefined}
  draggable={undefined}
  encType={undefined}
  form={undefined}
  formAction={undefined}
  formEncType={undefined}
  formMethod={undefined}
  formNoValidate={undefined}
  formTarget={undefined}
  frameBorder={undefined}
  headers={undefined}
  height={undefined}
  hidden={undefined}
  high={undefined}
  href={undefined}
  hrefLang={undefined}
  htmlFor={undefined}
  httpEquiv={undefined}
  icon={undefined}
  id={undefined}
  inputMode={undefined}
  integrity={undefined}
  is={undefined}
  keyParams={undefined}
  keyType={undefined}
  kind={undefined}
  label={undefined}
  lang={undefined}
  list={undefined}
  loop={undefined}
  low={undefined}
  manifest={undefined}
  marginHeight={undefined}
  marginWidth={undefined}
  max={undefined}
  maxLength={undefined}
  media={undefined}
  mediaGroup={undefined}
  method={undefined}
  min={undefined}
  minLength={undefined}
  multiple={undefined}
  muted={undefined}
  name={undefined}
  noValidate={undefined}
  nonce={undefined}
  open={undefined}
  optimum={undefined}
  pattern={undefined}
  placeholder={undefined}
  poster={undefined}
  preload={undefined}
  profile={undefined}
  radioGroup={undefined}
  readOnly={undefined}
  rel={undefined}
  required={undefined}
  reversed={undefined}
  role={undefined}
  rowSpan={undefined}
  rows={undefined}
  sandbox={undefined}
  scope={undefined}
  scoped={undefined}
  scrolling={undefined}
  seamless={undefined}
  selected={undefined}
  shape={undefined}
  size={undefined}
  sizes={undefined}
  span={undefined}
  spellCheck={undefined}
  src={undefined}
  srcDoc={undefined}
  srcLang={undefined}
  srcSet={undefined}
  start={undefined}
  step={undefined}
  style={
    Object {
      "animation": "fRXJaB 1s ease, bGJZDZ 1s ease",
      "backfaceVisibility": "visible",
    }
  }
  summary={undefined}
  tabIndex={undefined}
  target={undefined}
  title={undefined}
  type={undefined}
  useMap={undefined}
  value={undefined}
  width={undefined}
  wmode={undefined}
  wrap={undefined}
>
  <div>
    <p>
      Hello Clay Jansen!
    </p>
  </div>
</div>
`;
